--- a/styles.css
+++ b/styles.css
@@ -49,22 +49,20 @@ body {
     font-size: 14px;
     letter-spacing: 0px;
     font-weight: 500;
+    font-family: "Manrope", sans-serif;
     border-radius: 20px;
     transition: background-color 0.3s;
 }
 
 .navigation a img {
     margin-right: 8px;
-    /* width: 22px;
-height: 17px; */
+
 }
 
 .navigation a.active {
     color: #FFFFFF;
     background-color: #01F0D0;
     padding: 12px 16px;
-    /* width: 122px;
-height: 41px; */
 }
 
 .navigation a.active img {
@@ -93,12 +91,12 @@ height: 41px; */
 }
 
 .user-name {
-    width: 119px;
+    /* width: 121px; */
     height: 19px;
     display: flex;
     align-items: center;
     font-size: 14px;
-    font-family: "Manrope";
+    font-family: "Manrope", sans-serif;
     letter-spacing: 0px;
     font-weight: bold;
 }
@@ -109,7 +107,7 @@ height: 41px; */
     display: flex;
     align-items: center;
     font-size: 14px;
-    font-family: "Manrope";
+    font-family: "Manrope", sans-serif;
     letter-spacing: 0px;
     color: #707070;
 }
@@ -149,34 +147,103 @@ height: 41px; */
     background-color: #ffffff;
     width: 367px;
     height: 1054px;
-    /* padding: 20px; */
     border-radius: 16px;
 }
 
 .sidebar h2 {
-    padding: 20px;
     font-size: 24px;
+    font-family: "Manrope", sans-serif;
     letter-spacing: 0px;
+    height: 33px;
+    align-items: center;
     color: #072635;
-    /* margin-bottom: 20px; */
 }
 
-.patient-list {
-    list-style: none;
+.search-icon {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
 }
 
-.patient-list li {
+.sidebar-header {
     display: flex;
     align-items: center;
-    padding: 32px 20px;
+    justify-content: space-between;
+    padding: 20px 20px 40px 20px;
+}
+
+/* Container holding the patient list and slider */
+.patient-list-container {
+    position: relative;
+    width: 367px;
+    height: 941px;
+    overflow-y: auto;
+}
+
+/* Patient list styling */
+.patient-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
+/* Custom slider rail styling */
+.patient-list-slider {
+    position: absolute;
+    top: 0;
+    right: 4px;
+    width: 6px;
+    height: 100%;
+    /* Full height of the container */
+    background-color: #E3E4E6;
+    /* Rail color */
+    border-radius: 3px;
+}
+
+/* Custom slider thumb styling */
+.patient-list-thumb {
+    width: 100%;
+    height: 100px;
+    /* Adjust based on scroll length */
+    background-color: #072635;
+    /* Thumb color */
+    border-radius: 3px;
+    position: relative;
+    top: 0;
+}
+
+
+.patient-item {
+    display: flex;
+    align-items: center;
+    width: 353px;
+    height: 80px;
+    padding: 16px 20px;
     cursor: pointer;
-    border-radius: 4px;
+}
+
+.patient-item:first-child {
+    height: 64px;
+    padding-top: 0;
+}
+
+.patient-item:last-child {
+    height: 64px;
+    padding-bottom: 0;
 }
 
 .patient-list li img {
     width: 48px;
     height: 48px;
-    margin-right: 10px;
+    margin-right: 12px;
+}
+
+.patient-list .more-options {
+    width: 18px;
+    height: 4px;
+    margin-right: 0px !important;
 }
 
 .patient-list .selected {
@@ -185,6 +252,33 @@ height: 41px; */
     font-weight: bold;
     width: 353px;
     height: 80px;
+}
+
+.patient-info {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.patient-info .patient-name {
+    font-size: 14px;
+    color: #072635;
+    font-weight: bold;
+    font-family: "Manrope", sans-serif;
+    align-items: center;
+    letter-spacing: 0px;
+    text-align: left;
+    margin-bottom: 2px;
+}
+
+.patient-info .patient-details {
+    font-size: 14px;
+    font-family: "Manrope", sans-serif;
+    align-items: center;
+    letter-spacing: 0px;
+    text-align: left;
+    color: #707070;
+    margin-top: 2px;
 }
 
 /* Main Content */
@@ -207,11 +301,16 @@ height: 41px; */
     font-size: 24px;
     letter-spacing: 0px;
     color: #072635;
+    opacity: 1;
 }
 
 .chart-container {
-    max-width: 600px;
-    margin: 0 auto;
+    margin: 40px 0px 20px 0px;
+    width: 726px;
+    height: 298px;
+    background: #F4F0FE 0% 0% no-repeat padding-box;
+    border-radius: 12px;
+    opacity: 1;
 }
 
 .vitals {
@@ -223,12 +322,18 @@ height: 41px; */
 .vitals h1 {
     font-size: 30px;
     letter-spacing: 0px;
+    width: 109px;
+    height: 41px;
     color: #072635;
     text-align: left;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
 }
 
 .vitals h4 {
     font-size: 16px;
+    margin-top: 16px;
     letter-spacing: 0px;
     color: #072635;
     text-align: left;
@@ -236,22 +341,55 @@ height: 41px; */
 
 .vitals p {
     font-size: 14px;
+    margin-top: 17px;
     letter-spacing: 0px;
     color: #072635;
     text-align: left;
 }
 
-.vitals .vital {
-    padding: 10px;
+.vitals .vital-1 {
+    padding: 16px;
+    margin-right: 21px;
     flex: 1;
-    border-radius: 8px;
-    background-color: #f9fafc;
+    width: 228px;
+    height: 242px;
+    background: #E0F3FA 0% 0% no-repeat padding-box;
+    border-radius: 12px;
+    opacity: 1;
+}
+
+.vitals .vital-2 {
+    padding: 16px;
+    margin-right: 21px;
+    flex: 1;
+    width: 228px;
+    height: 242px;
+    background: #FFE6E9 0% 0% no-repeat padding-box;
+    border-radius: 12px;
+    opacity: 1;
+}
+
+.vitals .vital-3 {
+    padding: 16px;
+    flex: 1;
+    width: 228px;
+    height: 242px;
+    background: #FFE6F1 0% 0% no-repeat padding-box;
+    border-radius: 12px;
+    opacity: 1;
+}
+
+.vital-3 .vital-arrow {
+    display: inline-block;
+    width: 10px;
+    height: 5px;
+    margin-right: 8px;
+    vertical-align: middle;
 }
 
 .vitals .vital img.vital-icon {
     width: 96px;
     height: 96px;
-    margin-bottom: 8px;
 }
 
 /* Diagnostic List */
@@ -261,6 +399,16 @@ height: 41px; */
     height: 349px;
     padding: 20px;
     border-radius: 16px;
+    position: relative;
+}
+
+.diagnostic-header {
+    display: flex;
+    align-items: center;
+    /* width: 176px;
+    height: 33px; */
+    justify-content: space-between;
+    padding: 20px 0px 40px 20px;
 }
 
 .diagnostic-list table {
@@ -268,26 +416,80 @@ height: 41px; */
     border-collapse: collapse;
 }
 
-.diagnostic-list th,
-.diagnostic-list td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
+.diagnostic-list thead {
+    background-color: #F6F7F8;
+    color: #072635;
+    border-radius: 16px 16px 0 0;
 }
 
 .diagnostic-list th {
+    padding: 15px 16px 14px 16px;
     font-weight: bold;
-    color: #444;
+    text-align: left;
+}
+
+.diagnostic-list th:first-child {
+    border-top-left-radius: 24px;
+    border-bottom-left-radius: 24px;
+}
+
+.diagnostic-list th:last-child {
+    border-top-right-radius: 24px;
+    border-bottom-right-radius: 24px;
+}
+
+.diagnostic-list td {
+    padding: 11px 16px 10px 16px;
+    text-align: left;
+    border-bottom: 1px solid #F6F7F8;
+    border-spacing: 7px;
+}
+
+.diagnostic-list tr:last-child td {
+    border-bottom: none;
+}
+
+/* Custom slider rail styling */
+.diagnostic-list-slider {
+    position: absolute;
+    top: 155px;
+    right: 20px;
+    width: 6px;
+    height: 178px;
+    background-color: #E3E4E6;
+    border-radius: 3px;
+}
+
+/* Custom slider thumb styling */
+.diagnostic-list-thumb {
+    width: 100%;
+    height: 100px;
+    background-color: #072635;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
 }
 
 /* Lab Results */
 .lab-results {
     background-color: #ffffff;
     margin-top: 32px;
-    padding: 20px;
     width: 367px;
     height: 296px;
     border-radius: 16px;
+}
+
+.lab-header {
+    padding: 20px 210px 16px 20px;
+}
+
+.lab-results h2 {
+    font-size: 24px;
+    font-family: "Manrope", sans-serif;
+    letter-spacing: 0px;
+    height: 33px;
+    align-items: center;
+    color: #072635;
 }
 
 .lab-results ul {
@@ -297,7 +499,88 @@ height: 41px; */
 .lab-results li {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+}
+
+.result-list-container {
+    position: relative;
+    width: 367px;
+    height: 296px;
+    overflow-y: auto;
+}
+
+.result-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
+.result-list .selected {
+    background-color: #F6F7F8;
+    color: #FFFFFF;
+}
+
+/* Custom slider rail styling */
+.result-list-slider {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    width: 6px;
+    height: 207px;
+    background-color: #E3E4E6;
+    border-radius: 3px;
+}
+
+/* Custom slider thumb styling */
+.result-list-thumb {
+    width: 100%;
+    height: 100px;
+    background-color: #072635;
+    border-radius: 3px;
+    position: relative;
+    top: 0;
+}
+
+.result-item {
+    display: flex;
+    align-items: center;
+    width: 315px;
+    height: 35px;
+    padding: 10px 16px;
+    margin: 5px 4px 5px 22px;
+    cursor: pointer;
+}
+
+.result-item:first-child {
+    margin-top: 0;
+}
+
+.result-item:last-child {
+    margin-bottom: 0;
+}
+
+.result-list li img {
+    width: 20px;
+    height: 20px;
+    margin-right: 12px;
+}
+
+.result-info {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.result-info .result-name {
+    font-size: 14px;
+    color: #072635;
+    font-weight: bold;
+    font-family: "Manrope", sans-serif;
+    align-items: center;
+    letter-spacing: 0px;
+    text-align: left;
 }
 
 /* Profile Section */
@@ -305,7 +588,6 @@ height: 41px; */
     margin-top: -14px;
     text-align: center;
     background-color: #ffffff;
-    /* padding: 20px; */
     width: 367px;
     height: 740px;
     border-radius: 16px;
@@ -343,7 +625,7 @@ height: 41px; */
 /* Detail Title */
 .detail-title {
     font-size: 14px;
-    font-family: "Manrope";
+    font-family: "Manrope", sans-serif;
     color: #707070;
     font-weight: normal;
     margin-bottom: 2px;
@@ -352,9 +634,10 @@ height: 41px; */
 /* Detail Info */
 .detail-info {
     font-size: 14px;
-    font-family: "Manrope";
+    font-family: "Manrope", sans-serif;
     font-weight: bold;
     color: #072635;
+    text-transform: capitalize;
     margin-top: 2px;
 }
 
