--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,14 @@ body {
     width: 1px;
     height: 44px;
     background-color: #EDEDED;
-    /* The color of the divider */
+    opacity: 1;
+}
+
+.verfical-divider {
+    margin: 16px 0px;
+    width: 208px;
+    height: 1px;
+    background-color: #CBC8D4;
     opacity: 1;
 }
 
@@ -196,9 +203,7 @@ body {
     right: 4px;
     width: 6px;
     height: 100%;
-    /* Full height of the container */
     background-color: #E3E4E6;
-    /* Rail color */
     border-radius: 3px;
 }
 
@@ -206,14 +211,11 @@ body {
 .patient-list-thumb {
     width: 100%;
     height: 100px;
-    /* Adjust based on scroll length */
     background-color: #072635;
-    /* Thumb color */
     border-radius: 3px;
     position: relative;
     top: 0;
 }
-
 
 .patient-item {
     display: flex;
@@ -309,8 +311,108 @@ body {
     width: 726px;
     height: 298px;
     background: #F4F0FE 0% 0% no-repeat padding-box;
+    display: flex;
     border-radius: 12px;
     opacity: 1;
+}
+
+.chart-details {
+    display: block;
+    width: 486px;
+    height: 260px;
+    padding: 16px;
+}
+
+.chart-title {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    /* height: 100%; */
+    font-weight: bold;
+    font-size: 18px;
+    font-family: "Manrope", sans-serif;
+    padding: 0px 32px 12px 0px;
+}
+
+.chart-title h2 {
+    font-size: 18px;
+    letter-spacing: 0px;
+    color: #072635;
+}
+
+.last-months {
+    font-size: 14px;
+    color: #072635;
+    display: flex;
+    align-items: center;
+}
+
+.dropdown-icon {
+    width: 11px;
+    height: 6px;
+    margin-left: 16px;
+}
+
+.statistics {
+    margin: 16px 16px 81px 0px;
+    width: 208px;
+    height: 201px;
+}
+
+.stat {
+    display: grid;
+}
+
+.legend {
+    display: flex;
+    font-size: 14px;
+    font-weight: bold;
+    color: #072635;
+    opacity: 1;
+    margin-bottom: 8px;
+    align-items: center;
+}
+
+.legend-color {
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    margin-right: 4px;
+}
+
+.systolic-color {
+    background-color: #E57373;
+}
+
+.diastolic-color {
+    background-color: #8C6FE6;
+}
+
+.stat-value {
+    font-size: 22px;
+    font-weight: bold;
+    letter-spacing: 0px;
+    color: #072635;
+    width: 38px;
+    height: 30px;
+    margin-bottom: 8px;
+}
+
+.stat-label {
+    font-size: 14px;
+    letter-spacing: 0px;
+    color: #072635;
+    opacity: 1;
+    align-items: center;
+}
+
+.bloodPressureChart {
+    width: 417px;
+    height: 187px;
+}
+
+.Arrow-icon {
+    margin-right: 8px;
 }
 
 .vitals {
@@ -405,8 +507,6 @@ body {
 .diagnostic-header {
     display: flex;
     align-items: center;
-    /* width: 176px;
-    height: 33px; */
     justify-content: space-between;
     padding: 20px 0px 40px 20px;
 }
