--- a/styles.css
+++ b/styles.css
@@ -481,7 +481,7 @@ body {
     opacity: 1;
 }
 
-.vital-3 .vital-arrow {
+.vital-arrow {
     display: inline-block;
     width: 10px;
     height: 5px;
